--- a/style.css
+++ b/style.css
@@ -2,20 +2,27 @@
   --primary-color: #6c63ff;
   --secondary-color: #f5f2fe;
   --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+  --heading-font-family: "Playfair Display", serif;
+  --default-font-family: "Poppins", sans-serif;
+
 }
 
 body {
+
   margin-top: 100px;
 }
 
 h1,
 h2,
 h3 {
-  margin: 0;
+  margin:0;
 }
 
 h1 {
-  font-size: 96px;
+  font-size: 48px;
+  text-align: center;
+  margin-top: 40px;
+  
 }
 
 h2 {
